# brain_reader_gui

./: Cargo.toml  README.md
brainflow/src/ffi/: constants.rs
data/: forward.csv  land.csv  left.csv  left_2.csv  right.csv  takeoff.csv
src/: main.rs
